# src/features/comments/domain/update-comment-domain.dto.ts
@@ -1,3 +1,6 @@
+import { LikeInfoDomainDto } from "../../likes/domain/like-info-domain.dto";
+
 export type UpdateCommentDomainDto = {
   content: string;
+  likesInfo?: LikeInfoDomainDto;
 };
