# src/features/comments/routes/comments.route.ts
@@ -2,9 +2,14 @@ import { Router } from "express";
 import { accessTokenGuardMiddleware } from "../../../auth/middlewares/access-token-guard.middleware";
 import { idValidation } from "../../../core/middlewares/validation/params-id.validation-middleware";
 import { inputValidationResultMiddleware } from "../../../core/middlewares/validation/input-validtion-result.middleware";
-import { updateCommentRequestPayloadValidation } from "./comment-request.payload.validation-middlewares";
+import {
+  setLikeStatusRequestPayloadValidation,
+  updateCommentRequestPayloadValidation,
+} from "./comment-request.payload.validation-middlewares";
 import { container } from "../../../composition-root";
 import { CommentsController } from "./controllers/comments.controller";
+import { accessTokenOptionalMiddleware } from "../../../auth/middlewares/access-token-optional.middleware";
+import { LIKE_STATUS_PATH } from "../../../core/paths/paths";
 
 export const commentsRouter = Router({});
 
@@ -14,6 +19,7 @@ const commentsController =
 commentsRouter
   .get(
     "/:id",
+    accessTokenOptionalMiddleware,
     idValidation,
     inputValidationResultMiddleware,
     commentsController.getCommentHandler.bind(commentsController),
@@ -34,4 +40,13 @@ commentsRouter
     idValidation,
     inputValidationResultMiddleware,
     commentsController.deleteCommentHandler.bind(commentsController),
+  )
+
+  .put(
+    `/:id${LIKE_STATUS_PATH}`,
+    accessTokenGuardMiddleware,
+    idValidation,
+    setLikeStatusRequestPayloadValidation,
+    inputValidationResultMiddleware,
+    commentsController.setLikeStatusHandler.bind(commentsController),
   );
