# src/features/comments/routes/controllers/comments.controller.ts
@@ -5,6 +5,8 @@ import { errorsHandler } from "../../../../core/errors/errors.handler";
 import { UpdateCommentRequestPayload } from "../request-payloads/update-comment-request.payload";
 import { CommentsService } from "../../application/comments.service";
 import { CommentQueryService } from "../../application/comment.query.service";
+import { SetLikeRequestPayload } from "../request-payloads/set-like-request.payload";
+import { LikeStatus } from "../../../likes/domain/like-status-type";
 
 @injectable()
 export class CommentsController {
@@ -36,6 +38,7 @@ export class CommentsController {
     try {
       const commentOutput = await this.commentQueryService.findByIdOrFail(
         req.params.id,
+        req.userId ?? undefined,
       );
       res.send(commentOutput); //200 па змоўчаньні і ў json фармаце для аб'екта
     } catch (e: unknown) {
@@ -57,6 +60,31 @@ export class CommentsController {
       }
 
       await this.commentsService.update({ id, ...req.body }, userId);
+
+      res.sendStatus(HTTP_STATUSES.NO_CONTENT_204);
+    } catch (e: unknown) {
+      errorsHandler(e, res);
+    }
+  }
+
+  async setLikeStatusHandler(
+    req: Request<{ id: string }, {}, SetLikeRequestPayload>,
+    res: Response,
+  ) {
+    try {
+      const commentId = req.params.id;
+      const userId = req.userId;
+
+      if (!userId) {
+        res.sendStatus(HTTP_STATUSES.NOT_AUTHORIZED_401);
+        return;
+      }
+
+      await this.commentsService.setLikeStatus({
+        status: req.body.likeStatus as LikeStatus,
+        commentId,
+        userId,
+      });
 
       res.sendStatus(HTTP_STATUSES.NO_CONTENT_204);
     } catch (e: unknown) {
