# src/features/likes/domain/like-domain.dto.ts
@@ -1,0 +1,7 @@
+import { LikeStatus } from "./like-status-type";
+
+export type LikeDomainDto = {
+  status: LikeStatus;
+  authorId: string;
+  parentId: string;
+};
