# src/features/likes/domain/like-info-domain.dto.ts
@@ -1,0 +1,4 @@
+export type LikeInfoDomainDto = {
+  likesCount: number;
+  dislikesCount: number;
+};
