# src/features/likes/domain/like-status-type.ts
@@ -1,0 +1,5 @@
+export enum LikeStatus {
+  NONE = "None",
+  LIKE = "Like",
+  DISLIKE = "Dislike",
+}
