# src/features/likes/domain/update-like-domain.dto.ts
@@ -1,0 +1,5 @@
+import { LikeStatus } from "./like-status-type";
+
+export type UpdateLikeDomainDto = {
+  status: LikeStatus;
+};
